syntax = "proto3";

package proto;

option go_package="./proto";

service AuthorizationService {
    rpc UserRegister(CreateUserRequest) returns (CreateUserResponse);
    rpc UserLogin(UserLoginRequest) returns(UserLoginResponse);
    rpc UserGetById(UserIdRequest) returns(UserGetByIdResponse);
}



message CreateUserRequest{
    string first_name = 1;
    string second_name = 2;
    string birthdate = 3;
    string biography =4;
    string city = 5;
    string password = 6 ;
}

message CreateUserResponse{
    uint32 status = 1;
    string message = 2;
    string user_id = 3;
}

message UserLoginRequest{
    string user_id = 1;
    string password = 3;
}

message UserLoginResponse {
    uint32 status = 1;
    string message = 2;
    string token = 3;
}

message UserIdRequest{
    string user_id = 1;

}

message UserGetByIdResponse{
    uint32 status = 1;
    string message = 2;
    User user = 3;
}

message User{
    string id = 1;
    string first_name = 2;
    string second_name = 3;
    string birthdate = 4;
    string biography =5;
    string city = 6;    
}

